[package]
name = "sim_client"
version = "0.1.0"
authors = ["Filip Björklund <Afisse13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.7.0", features = ["v3_16"] }
gdk = "0.11.0"
gio = "0.7.0"
sourceview = "0.7.0"
gtk-source-sys = "0.9.0"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
bincode = "1.2.0"
rust_sodium = "0.10.2"
base64 = "0.11.0"
sha2 = "0.8.0"
reqwest = "0.9.22"
rand = "0.7.2"